going back to simple

--- a/_config.yml
+++ b/_config.yml
@@ -26,21 +26,9 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-so-simple
+theme: minima
 plugins:
-  - jekyll-seo-tag
-  - jekyll-sitemap
   - jekyll-feed
-  - jekyll-paginate
-
-defaults:
-  # Posts defaults
-  - scope:
-      path: "_posts"
-      type: posts
-    values:
-      layout: post
-      share: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
