--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ twitter_username:   MrFatPanda123
 github_username:    Korbeil
 
 # Google APIs
-google_verify:      false
-google_analytics:   false
+google_verify:      HHnf5ZHystzxEmh_821fA6cPVYxp24g00G92h8KUDN8
+google_analytics:   UA-118536100-1
 
 # Site Settings
 url:                "https://korbeil.github.io/"
