--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ google_analytics:   UA-118536100-1
 # Site Settings
 url:                "https://korbeil.github.io"
 baseurl:            ""
-permalink:          /notes/:title # Post permalink
+permalink:          /notes/:month-:year-:title # Post permalink
 timezone:           France/Paris
 mathjax:            false
 
