--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ author_email:       baptiste.leduc@gmail.com
 author_gravatar:    369bc00f6a4b6d8d8b7d82df901009c2
 twitter_username:   MrFatPanda123
 github_username:    Korbeil
+spotify_user:       11130977231
 
 # Google APIs
 google_verify:      HHnf5ZHystzxEmh_821fA6cPVYxp24g00G92h8KUDN8
