--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
   - 2.4
 
 script:
-  - jekyll build
+  - bundle exec jekyll build
   - |
     cd _site/
     now --public -A ../now.json --token $NOW_TOKEN
