--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ install:
   - bundle install --jobs=3 --retry=3
   - npm install
 
+before_script:
+  - rm now.json
+
 script:
   - bundle exec jekyll build
   - |
