adding linkedin profile

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ author_gravatar:    369bc00f6a4b6d8d8b7d82df901009c2
 twitter_username:   MrFatPanda123
 github_username:    Korbeil
 spotify_user:       11130977231
+linkedin_user:      baptiste-leduc-333167a0
 
 # Google APIs
 google_verify:      HHnf5ZHystzxEmh_821fA6cPVYxp24g00G92h8KUDN8
