--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - npm install
 
 script:
-  - bundle exec jekyll build
+  - JEKYLL_ENV=production bundle exec jekyll build
   - |
     cd _site/
     $NOW_SCRIPT --public $NOW_FLAGS
