update Twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description:        "About me & some blog posts"
 author_name:        "Baptiste Leduc"
 author_email:       baptiste.leduc@gmail.com
 author_gravatar:    369bc00f6a4b6d8d8b7d82df901009c2
-twitter_username:   MrFatPanda123
+twitter_username:   Korbeil_
 github_username:    Korbeil
 spotify_user:       11130977231
 linkedin_user:      baptiste-leduc-333167a0
